--- a/typst/cited.bib
+++ b/typst/cited.bib
@@ -1,47 +1,248 @@
-@book{texbook,
-  author = {Donald E. Knuth},
-  year = {1986},
-  title = {The {\TeX} Book},
-  publisher = {Addison-Wesley Professional}
+@article{monsky_conjecture_1990,
+	title = {A conjecture of Stein on plane dissections},
+	volume = {205},
+	rights = {http://www.springer.com/tdm},
+	issn = {0025-5874, 1432-1823},
+	url = {http://link.springer.com/10.1007/BF02571264},
+	doi = {10.1007/BF02571264},
+	pages = {583--592},
+	number = {1},
+	journaltitle = {Mathematische Zeitschrift},
+	shortjournal = {Math Z},
+	author = {Monsky, Paul},
+	urldate = {2025-09-30},
+	date = {1990-09},
+	langid = {english},
 }
 
-@book{latex:companion,
-  author = {Frank Mittelbach and Michel Gossens
-            and Johannes Braams and David Carlisle
-            and Chris Rowley},
-  year = {2004},
-  title = {The {\LaTeX} Companion},
-  publisher = {Addison-Wesley Professional},
-  edition = {2}
+@article{thomas_dissection_1968,
+	title = {A Dissection Problem},
+	volume = {41},
+	issn = {0025-570X, 1930-0980},
+	url = {https://www.tandfonline.com/doi/full/10.1080/0025570X.1968.11975875},
+	doi = {10.1080/0025570X.1968.11975875},
+	pages = {187--190},
+	number = {4},
+	journaltitle = {Mathematics Magazine},
+	shortjournal = {Mathematics Magazine},
+	author = {Thomas, John},
+	urldate = {2025-09-30},
+	date = {1968-09},
+	langid = {english},
 }
 
-@book{latex2e,
-  author = {Leslie Lamport},
-  year = {1994},
-  title = {{\LaTeX}: a Document Preparation System},
-  publisher = {Addison Wesley},
-  address = {Massachusetts},
-  edition = {2}
+@article{stein_generalized_2000,
+	title = {A Generalized Conjecture about Cutting a Polygon into Triangles of Equal Areas},
+	volume = {24},
+	rights = {http://www.springer.com/tdm},
+	issn = {0179-5376, 1432-0444},
+	url = {http://link.springer.com/10.1007/s004540010021},
+	doi = {10.1007/s004540010021},
+	pages = {141--145},
+	number = {1},
+	journaltitle = {Discrete \& Computational Geometry},
+	shortjournal = {Discrete Comput Geom},
+	author = {Stein, S.},
+	urldate = {2025-09-30},
+	date = {2000-01},
+	langid = {english},
 }
 
-@article{knuth:1984,
-  title={Literate Programming},
-  author={Donald E. Knuth},
-  journal={The Computer Journal},
-  volume={27},
-  number={2},
-  pages={97--111},
-  year={1984},
-  publisher={Oxford University Press}
+@incollection{stein_algebra_2014,
+	location = {Washington},
+	title = {Algebra and Tiling: Homomorphisms in the Service of Geometry},
+	isbn = {9780883850411},
+	series = {Carus},
+	shorttitle = {Algebra and Tiling},
+	pages = {107 -- 133},
+	number = {v.25},
+	publisher = {Mathematical Association of America},
+	author = {Stein, Sherman K. and Szabo, Sandor},
+	date = {2014},
 }
 
-@inproceedings{lesk:1977,
-  title={Computer Typesetting of Technical Journals on {UNIX}},
-  author={Michael Lesk and Brian Kernighan},
-  booktitle={Proceedings of American Federation of
-             Information Processing Societies: 1977
-             National Computer Conference},
-  pages={879--888},
-  year={1977},
-  address={Dallas, Texas}
+@article{stein_cutting_2004,
+	title = {Cutting a Polygon into Triangles of Equal Areas},
+	volume = {26},
+	rights = {http://www.springer.com/tdm},
+	issn = {0343-6993},
+	url = {http://link.springer.com/10.1007/BF02985395},
+	doi = {10.1007/BF02985395},
+	pages = {17--21},
+	number = {1},
+	journaltitle = {The Mathematical Intelligencer},
+	shortjournal = {The Mathematical Intelligencer},
+	author = {Stein, Sherman},
+	urldate = {2025-09-30},
+	date = {2004-12},
+	langid = {english},
+}
+
+@article{stein_cutting_1999,
+	title = {Cutting a Polyomino into Triangles of Equal Areas},
+	volume = {106},
+	issn = {0002-9890, 1930-0972},
+	url = {https://www.tandfonline.com/doi/full/10.1080/00029890.1999.12005036},
+	doi = {10.1080/00029890.1999.12005036},
+	pages = {255--257},
+	number = {3},
+	journaltitle = {The American Mathematical Monthly},
+	shortjournal = {The American Mathematical Monthly},
+	author = {Stein, Sherman K.},
+	urldate = {2025-09-30},
+	date = {1999-03},
+	langid = {english},
+}
+
+@article{praton_cutting_2002,
+	title = {Cutting Polyominos into Equal-Area Triangles},
+	volume = {109},
+	issn = {0002-9890, 1930-0972},
+	url = {https://www.tandfonline.com/doi/full/10.1080/00029890.2002.11919917},
+	doi = {10.1080/00029890.2002.11919917},
+	pages = {818--826},
+	number = {9},
+	journaltitle = {The American Mathematical Monthly},
+	shortjournal = {The American Mathematical Monthly},
+	author = {Praton, Iwan},
+	urldate = {2025-09-30},
+	date = {2002-11},
+	langid = {english},
+}
+
+@article{mead_dissection_1979,
+	title = {Dissection of the hypercube into simplexes},
+	volume = {76},
+	issn = {0002-9939, 1088-6826},
+	url = {https://www.ams.org/proc/1979-076-02/S0002-9939-1979-0537093-6/},
+	doi = {10.1090/S0002-9939-1979-0537093-6},
+	abstract = {A generalization of Sperner’s Lemma is proved and, using extensions of 
+              p 
+              -adic valuations to the real numbers, it is shown that the unit hypercube in 
+              n 
+              dimensions can be divided into 
+              m 
+              simplexes all of equal hypervolume if and only if 
+              m 
+              is a multiple of 
+              n 
+              !. This extends the corresponding result for 
+               
+                 
+                   
+                     
+                      n 
+                      = 
+                      2 
+                     
+                    n = 2 
+                   
+                 
+               
+              of Paul Monsky.},
+	pages = {302--304},
+	number = {2},
+	journaltitle = {Proceedings of the American Mathematical Society},
+	shortjournal = {Proc. Amer. Math. Soc.},
+	author = {Mead, D. G.},
+	urldate = {2025-09-30},
+	date = {1979-09},
+	langid = {english},
+}
+
+@article{kasimatis_dissections_1989,
+	title = {Dissections of regular polygons into triangles of equal areas},
+	volume = {4},
+	rights = {http://www.springer.com/tdm},
+	issn = {0179-5376, 1432-0444},
+	url = {http://link.springer.com/10.1007/BF02187738},
+	doi = {10.1007/BF02187738},
+	pages = {375--381},
+	number = {4},
+	journaltitle = {Discrete \& Computational Geometry},
+	shortjournal = {Discrete Comput Geom},
+	author = {Kasimatis, E. A.},
+	urldate = {2025-09-30},
+	date = {1989-08},
+	langid = {english},
+}
+
+@article{stein_equidissections_1989,
+	title = {Equidissections of centrally symmetric octagons},
+	volume = {37},
+	rights = {http://www.springer.com/tdm},
+	issn = {0001-9054, 1420-8903},
+	url = {http://link.springer.com/10.1007/BF01836454},
+	doi = {10.1007/BF01836454},
+	pages = {313--318},
+	number = {2},
+	journaltitle = {Aequationes Mathematicae},
+	shortjournal = {Aeq. Math.},
+	author = {Stein, Sherman},
+	urldate = {2025-09-30},
+	date = {1989-06},
+	langid = {english},
+}
+
+@article{abrams_generalized_2022,
+	title = {Generalized Dissections and Monsky’s Theorem},
+	volume = {67},
+	issn = {0179-5376, 1432-0444},
+	url = {https://link.springer.com/10.1007/s00454-021-00354-9},
+	doi = {10.1007/s00454-021-00354-9},
+	pages = {947--983},
+	number = {3},
+	journaltitle = {Discrete \& Computational Geometry},
+	shortjournal = {Discrete Comput Geom},
+	author = {Abrams, Aaron and Pommersheim, Jamie},
+	urldate = {2025-09-30},
+	date = {2022-04},
+	langid = {english},
+}
+
+@article{monsky_dividing_1970,
+	title = {On Dividing A Square Into Triangles},
+	volume = {77},
+	issn = {0002-9890, 1930-0972},
+	url = {https://www.tandfonline.com/doi/full/10.1080/00029890.1970.11992441},
+	doi = {10.1080/00029890.1970.11992441},
+	pages = {161--164},
+	number = {2},
+	journaltitle = {The American Mathematical Monthly},
+	shortjournal = {The American Mathematical Monthly},
+	author = {Monsky, Paul},
+	urldate = {2025-09-30},
+	date = {1970-02},
+	langid = {english},
+}
+
+@misc{rudenko_equidissection_2012,
+	title = {On equidissection of balanced polygons},
+	url = {http://arxiv.org/abs/1206.4591},
+	doi = {10.48550/arXiv.1206.4591},
+	abstract = {In this paper we show that a lattice balanced polygon of odd area cannot be cut into an odd number of triangles of equal areas. First result of this type was obtained by Paul Monsky in 1970. He proved that a square cannot be cut into an odd number of triangles of equal areas. In 2000 Sherman Stein conjectured that the same holds for any balanced polygon. We also show connections between the equidissection problem and tropical geometry.},
+	number = {{arXiv}:1206.4591},
+	publisher = {{arXiv}},
+	author = {Rudenko, Daniil},
+	urldate = {2025-09-30},
+	date = {2012-08-03},
+	eprinttype = {arxiv},
+	eprint = {1206.4591},
+	keywords = {Mathematics - Algebraic Geometry, Mathematics - Combinatorics},
+}
+
+@book{gouvea_p-adic_2020,
+	location = {Cham},
+	title = {p-adic Numbers: An Introduction},
+	rights = {http://www.springer.com/tdm},
+	isbn = {9783030472948 9783030472955},
+	url = {http://link.springer.com/10.1007/978-3-030-47295-5},
+	series = {Universitext},
+	shorttitle = {p-adic Numbers},
+	publisher = {Springer International Publishing},
+	author = {Gouvêa, Fernando Q.},
+	urldate = {2025-10-05},
+	date = {2020},
+	langid = {english},
+	doi = {10.1007/978-3-030-47295-5},
 }
